--- a/common/body_tag.html
+++ b/common/body_tag.html
@@ -1,7 +1,7 @@
-{{#if theme-setting 'enable_fireworks'}}
-  <div class="firework"><div></div></div>
-  <div class="firework"><div></div></div>
-  <div class="firework"><div></div></div>
-  <div class="firework"><div></div></div>
-  <div class="firework"><div></div></div>
-{{/if}}
+<div class="fireworks-container">
+    <div class="firework"><div></div></div>
+    <div class="firework"><div></div></div>
+    <div class="firework"><div></div></div>
+    <div class="firework"><div></div></div>
+    <div class="firework"><div></div></div>
+</div>
