--- a/common/body_tag.html
+++ b/common/body_tag.html
@@ -1,18 +1,1 @@
-<div class="fireworks-container">
-    <div class="firework firework-1">
-      <div class="explosion">
-        <div class="particle particle-1"></div>
-        <div class="particle particle-2"></div>
-        <div class="particle particle-3"></div>
-        <div class="particle particle-4"></div>
-        <div class="particle particle-5"></div>
-        <div class="particle particle-6"></div>
-        <div class="particle particle-7"></div>
-        <div class="particle particle-8"></div>
-        <div class="particle particle-9"></div>
-        <div class="particle particle-10"></div>
-        <div class="particle particle-11"></div>
-        <div class="particle particle-12"></div>
-      </div>
-    </div>
-  </div>
+<div class="fireworks-container"></div>
