--- a/common/after_header.html
+++ b/common/after_header.html
@@ -1,3 +1,4 @@
+{{#unless theme-setting 'enable_lights_sticky'}}
 <ul class="lightrope">
   <li></li>
   <li></li>
@@ -42,3 +43,4 @@
   <li></li>
   <li></li>
 </ul>
+{{/unless}}s
